attention architecture has better generalization

--- a/lstm1.ipynb
+++ b/lstm1.ipynb
@@ -548,16 +548,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5f2eab64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = train_data[:, :5, :, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "id": "c024cd93",
    "metadata": {
     "collapsed": false
@@ -607,36 +597,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Processing aug 1:  50%|█████     | 40/80 [00:01<00:01, 30.19it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:  50%|█████     | 40/80 [00:01<00:01, 30.19it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Processing aug 1: 100%|██████████| 80/80 [00:01<00:00, 61.01it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1: 100%|██████████| 80/80 [00:01<00:00, 61.01it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                                 \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:02<00:08,  2.24s/it]\u001b[A\n",
+      "                                                                 \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:02<00:08,  2.24s/it]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:02<00:03,  1.15s/it]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:02<00:03,  1.15s/it]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  60%|██████    | 3/5 [00:03<00:01,  1.25it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  60%|██████    | 3/5 [00:03<00:01,  1.25it/s]\u001B[A\n",
       "\n",
-      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  80%|████████  | 4/5 [00:03<00:00,  1.56it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  80%|████████  | 4/5 [00:03<00:00,  1.56it/s]\u001B[A\n",
       "\n",
-      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations: 100%|██████████| 5/5 [00:03<00:00,  1.34it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations: 100%|██████████| 5/5 [00:03<00:00,  1.34it/s]\u001B[A\n",
       "Processing chunks:  20%|██        | 1/5 [00:03<00:15,  3.97s/it]"
      ]
     },
@@ -653,32 +643,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.93it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.93it/s]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.72it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.72it/s]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.77it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.77it/s]\u001B[A\n",
       "\n",
-      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.80it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.80it/s]\u001B[A\n",
       "\n",
-      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.83it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.83it/s]\u001B[A\n",
       "Processing chunks:  40%|████      | 2/5 [00:05<00:08,  2.79s/it]"
      ]
     },
@@ -695,32 +685,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  3.16it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  3.16it/s]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.97it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.97it/s]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.87it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.87it/s]\u001B[A\n",
       "\n",
-      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.71it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.71it/s]\u001B[A\n",
       "\n",
-      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.77it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.77it/s]\u001B[A\n",
       "Processing chunks:  60%|██████    | 3/5 [00:07<00:04,  2.43s/it]"
      ]
     },
@@ -737,32 +727,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.09it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.09it/s]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.43it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.43it/s]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.67it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.67it/s]\u001B[A\n",
       "\n",
-      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.54it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.54it/s]\u001B[A\n",
       "\n",
-      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.55it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.55it/s]\u001B[A\n",
       "Processing chunks:  80%|████████  | 4/5 [00:10<00:02,  2.32s/it]"
      ]
     },
@@ -779,32 +769,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.87it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:00<00:01,  2.87it/s]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.81it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:00<00:01,  2.81it/s]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.83it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  60%|██████    | 3/5 [00:01<00:00,  2.83it/s]\u001B[A\n",
       "\n",
-      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 4:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.89it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations:  80%|████████  | 4/5 [00:01<00:00,  2.89it/s]\u001B[A\n",
       "\n",
-      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 5:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                        \u001b[A\u001b[A\n",
-      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.88it/s]\u001b[A\n",
+      "                                                        \u001B[A\u001B[A\n",
+      "Augmentations: 100%|██████████| 5/5 [00:01<00:00,  2.88it/s]\u001B[A\n",
       "Processing chunks: 100%|██████████| 5/5 [00:12<00:00,  2.40s/it]\n"
      ]
     },
