new top score: social lstm 2

--- a/lstm_attention_social.ipynb
+++ b/lstm_attention_social.ipynb
@@ -1820,6 +1820,16 @@
     "    X_train = np.array(X_train_scenarios)\n",
     "    y_train = np.array(y_train_deltas)\n",
     "    \n",
+    "    # --- Normalize Input and Output ---\n",
+    "    X_mean = X_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 6)\n",
+    "    X_std = X_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
+    "\n",
+    "    y_mean = y_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 2)\n",
+    "    y_std = y_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
+    "\n",
+    "    X_train = (X_train - X_mean) / X_std\n",
+    "    y_train = (y_train - y_mean) / y_std\n",
+    "    \n",
     "    print(f\"Input shape: {X_train.shape}, Delta output shape: {y_train.shape}\")\n",
     "    \n",
     "    # Create model\n",
@@ -3142,7 +3152,7 @@
    ],
    "source": [
     "# Evaluate on training data\n",
-    "evaluate_mse(standardized_train_data[:300], model)"
+    "evaluate_mse(standardized_train_data[:300], model, Tobs, Tpred, X_mean, X_std, y_mean, y_std)"
    ]
   },
   {
@@ -3250,7 +3260,7 @@
     }
    ],
    "source": [
-    "generate_social_lstm_submission(test_data, model, 'social_lstm_submission.csv',\n",
+    "generate_social_lstm_submission(test_data, model, 'attention_social_lstm.csv',\n",
     "                               X_mean=X_mean, X_std=X_std, y_mean=y_mean, y_std=y_std)"
    ]
   },
