attention social lstm

--- a/lstm_attention_social.ipynb
+++ b/lstm_attention_social.ipynb
@@ -2264,7 +2264,11 @@
       "Epoch 5/200\n",
       "\u001B[1m750/750\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m257s\u001B[0m 342ms/step - loss: 0.2250 - mae: 0.3316 - val_loss: 0.2892 - val_mae: 0.3637\n",
       "Epoch 6/200\n",
-      "\u001B[1m634/750\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m━━━━\u001B[0m \u001B[1m48s\u001B[0m 417ms/step - loss: 0.4459 - mae: 0.4845"
+      "\u001B[1m750/750\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m347s\u001B[0m 462ms/step - loss: 0.4287 - mae: 0.4734 - val_loss: 0.1976 - val_mae: 0.3178\n",
+      "\n",
+      "--- Phase 2: Fine-tuning ---\n",
+      "Epoch 1/100\n",
+      "\u001B[1m 16/750\u001B[0m \u001B[37m━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[1m6:49\u001B[0m 558ms/step - loss: 0.1375 - mae: 0.2391"
      ]
     }
    ],
